--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+.idea
+src/**/*.js
+!src/systemjs.config.extras.js
+!src/systemjs.config.js
+!src/systemjs-angular-loader.js
+*.js.map
+e2e/**/*.js
+e2e/**/*.js.map
+_test-output
+_temp
+
 # Logs
 logs
 *.log
